--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body {
 }
 
 span {
-    color: var(--main-color)
+    color: var(--main-color);
 }
 
 .about-content h1 {
@@ -244,7 +244,7 @@ span {
     border-top: 15px solid transparent;
     border-bottom: 15px solid transparent;
     border-left: 15px solid #fff;
-    right: -15px;
+    right: -14px;
 }
 
 .right-container-arrow {
@@ -256,7 +256,7 @@ span {
     border-top: 15px solid transparent;
     border-bottom: 15px solid transparent;
     border-right: 15px solid #fff;
-    left: -15px;
+    left: -14px;
 }
 
 .projects {
@@ -267,6 +267,11 @@ span {
     margin-bottom: 4rem;
 }
 
+.heading {
+    text-align: center;
+    font-size: 4.5rem;
+}
+
 .projects-container {
     display: grid;
     align-items: center;
@@ -274,7 +279,7 @@ span {
     gap: 2.5rem;
 }
 
-.projects-container .projects-box {
+.projects-container .project-box {
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem --bg-color;
@@ -282,11 +287,11 @@ span {
     display: flex;
 }
 
-.projects-box img {
+.project-box img {
     width: 100%;
 }
 
-.projects-box .project-layer {
+.project-box .project-layer {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -307,4 +312,23 @@ span {
 .project-layer p {
     font-size : 1.6rem;
     margin: .3rem 0 1rem;
+}
+
+.project-hidden {
+    transition: all 1s;
+    opacity: 0;
+    transform: translateX(-300px);
+}
+
+.project-show {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.project-box:nth-child(2) {
+    transition-delay: 200ms;
+}
+
+.project-box:nth-child(3) {
+    transition-delay: 400ms;
 }
